[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dandisets-linkml-status"
dynamic = ["version"]
description = 'A tool for reporting the status of the translation of DANDI schemas from Pydantic definitions to LinkML definitions'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"  # todo: Is this the correct license?
keywords = []
authors = [
  { name = "Isaac To", email = "isaac.chun.to@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/dandi/dandisets-linkml-status#readme"
Issues = "https://github.com/dandi/dandisets-linkml-status/issues"
Source = "https://github.com/dandi/dandisets-linkml-status"

[tool.hatch.version]
path = "src/dandisets_linkml_status/__about__.py"

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.types]
pyhton = "3.11"
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dandisets_linkml_status tests}"

[tool.coverage.run]
source_pkgs = ["dandisets_linkml_status", "tests"]
branch = true
parallel = true
omit = [
  "src/dandisets_linkml_status/__about__.py",
]

[tool.coverage.paths]
dandisets_linkml_status = ["src/dandisets_linkml_status", "*/dandisets-linkml-status/src/dandisets_linkml_status"]
tests = ["tests", "*/dandisets-linkml-status/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
