[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dandisets-linkml-status-tools"
dynamic = ["version"]
description = 'Tools for reporting the status of the translation of DANDI schemas from Pydantic definitions to LinkML definitions'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"  # todo: Is this the correct license?
keywords = []
authors = [
  { name = "Isaac To", email = "isaac.chun.to@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "dandi~=0.63",
  "dandischema>=0.10.2",
  "eval-type-backport>=0.2.0",
  "jsondiff",
  "pydantic2linkml @ git+https://github.com/dandi/pydantic2linkml.git",
  "pyyaml>=6.0.2",
  "typer",
]

[project.urls]
Documentation = "https://github.com/dandi/dandisets-linkml-status-tools#readme"
Issues = "https://github.com/dandi/dandisets-linkml-status-tools/issues"
Source = "https://github.com/dandi/dandisets-linkml-status-tools"

[project.scripts]
dandisets-report-tools = "dandisets_linkml_status_tools.cli:app"

[tool.hatch.version]
path = "src/dandisets_linkml_status_tools/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
python = "3.10"

[tool.hatch.envs.test]
extra-dependencies = [
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "pytest-xdist",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/dandisets_linkml_status_tools tests}"

[tool.coverage.run]
source_pkgs = ["dandisets_linkml_status_tools", "tests"]
branch = true
parallel = true
omit = [
  "src/dandisets_linkml_status_tools/__about__.py",
]

[tool.coverage.paths]
dandisets_linkml_status_tools = ["src/dandisets_linkml_status_tools", "*/dandisets-linkml-status-tools/src/dandisets_linkml_status_tools"]
tests = ["tests", "*/dandisets-linkml-status-tools/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*'
check-hidden = true
# ignore-regex = ''
# ignore-words-list = ''

[tool.ruff]
line-length = 88
indent-width = 4
[tool.ruff.lint]
ignore = [
  # rules to ignore by ruff
]
[tool.ruff.lint.per-file-ignores]
"**/tests/**/*" = [
  # === defaults recommended by hatch ===
  # https://hatch.pypa.io/latest/config/internal/static-analysis/#per-file-ignored-rules
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S",
  "TID252",
  # Allow access to protected members in tests
  "SLF001",
]
